# o9ml

./: .gitignore  ADVANCED_LAYER_EMERGENT_REASONING.md  ARCHITECTURE.md  ATTENTION_TENSOR_DOF.md  CMakeCache.txt  CMakeLists.txt  CMakeListsNeuralSymbolic.txt  COGNITIVE_SYNERGY_ENGINE.md  CORE_LAYER_HYPERGRAPH_GENESIS.md  DYNAMIC_KERNEL_SHAPING.md  FOUNDATION_TENSOR_DOF.md  GITHUB_ACTIONS_ARCHITECTURE.md  GNUCASHCOG_INTEGRATION.md  IMPLEMENTATION_CHECKLIST.md  INTEGRATION_TENSOR_STRUCTURE.md  LANGUAGE_TENSOR_DOF.md  LEARNING_KERNEL_TENSOR_DOF.md  LOGIC_LAYER_COMPLETE.md  OZCOG_INTEGRATION.md  PACKAGING_TENSOR_SHAPE.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE4_IMPLEMENTATION_COMPLETE.md  PHASE5_IMPLEMENTATION_COMPLETE.md  README-orc-as-workflow.md  README.md  ROBOTICS_EMBODIED_INTEGRATION_SUMMARY.md  SELF_HEALING_CI_DOCS.md  advanced-layer-build-test.sh  advanced-layer-emergent-reasoning.cpp  atomspace_relex_integration.py  atomspace_sentence_3_words.scm  atomspace_sentence_4_words.scm  atomspace_sentence_6_words.scm  attention_benchmark_demo  attention_benchmark_demo.cc  build_cognitive_layer.sh  clone_ozcog_repos.sh  cognitive_integration  cognitive_mesh_server.py  cognitive_primitives_demo.scm  (+46 more)
.github/: dependabot.yml
.github/workflows/: as-build.yml  autogen-build-issues.yml  autogen-build-issues.yml.old  build-test-package.yml  cogci.yml  cogci.yml.backup  coghyper.yml  cogml-build.yml  cogml-full.yml  cogml-full2.yml  cognitive-synergy-engine.yml  gen-cognitive-issues.yml  learn-build.yml  opencog-build.yml  opencog-central.yml  orc-as-build.yml  pln-build.yml  test-build.yml  test-cognitive-synergy.yml
artifacts-logic-layer/: cognitive_integration  knowledge_graph_validation  logic_layer_test_report.md  logic_reasoning_engine  logic_tensor_dimensions.md
benchmarks/: ecan_benchmark.py
build-foundation/: foundation_build_report.json
ci_artifacts/: escalation_report.json  human_review_summary.md  success_report.json
cmake/: HardwareMatrix.cmake  hardware_matrix_config.h.in
cogml/: __init__.py  cli.py  cognitive_primitives.py  hypergraph_encoding.py  validation.py
cogml/api/: __init__.py  cognitive_mesh_api.py  websocket_streams.py
cogml/embodiment/: __init__.py  embodiment_tensor.py  ros_bridge.py  unity3d_bridge.py
cogml/tests/: test_cognitive_mesh_api.py  test_embodiment_integration.py  test_real_time_streams.py
debian/: changelog  cogml.install  control  rules
docs/: ECAN_MESH_TOPOLOGY.md  TENSOR_ENCODING_SPECIFICATION.md  orc-as-build-workflow.md  orc-as-comprehensive-dependencies.md
ecan/: __init__.py  attention_kernel.py  attention_spreading.py  decay_refresh.py  economic_allocator.py  resource_scheduler.py
examples/: language_atomspace_integration.scm
gnucashcog-v3/: cognitive-accounting-demo.cpp
hypergraph-api-test/data/: api_config.json  test_hypergraph.scm
hypergraph-api-test/src/: api_test_client.cpp
hypergraph-genesis-test/data/: genesis_knowledge.scm  tensor_dimensions.md
hypergraph-genesis-test/results/: genesis_report.json
hypergraph-genesis-test/src/: atomspace_core_test.cpp  storage_test.cpp
integration-test/src/: foundation_integration_test.cpp  opencog_system_integration_test.cpp
meta_cognition/: __init__.py
orc-ai/asmoses/: CMakeLists.txt
orc-ai/miner/: CMakeLists.txt
orc-ai/moses/: CMakeLists.txt
orc-ai/pln/: CMakeLists.txt
orc-ai/ure/: CMakeLists.txt
orc-as/atomspace/: CMakeLists.txt
orc-as/atomspace-restful/: CMakeLists.txt
orc-ct/attention/: CMakeLists.txt
orc-ct/attention/benchmarks/: CMakeLists.txt  attention_benchmark.cc  attention_benchmark.h
orc-dv/cogutil/: CMakeLists.txt
orc-nl/link-grammar/: configure~
orc-nl/relex/: build.xml
orc-sv/cogserver/: CMakeLists.txt
orc-sv/cogserver/cmake/: CMakeLists.txt  CogServerConfig.cmake.in
orchestral-architect/: CMakeLists.txt  README.md  build.sh
orchestral-architect/demo/: orchestral_demo.cpp
orchestral-architect/docs/: TECHNICAL_ARCHITECTURE.md
orchestral-architect/src/: OrchestralSystem.cpp  OrchestralSystem.h
orchestral-architect/src/benchmarks/: NeuralSymbolicBenchmark.cpp  NeuralSymbolicBenchmark.h
orchestral-architect/src/core/: AgenticKernel.cpp  AgenticKernel.h  KernelRegistry.cpp  KernelRegistry.h
orchestral-architect/src/kernels/: HypergraphKernel.cpp  HypergraphKernel.h  NeuralInferenceKernel.cpp  NeuralInferenceKernel.h  SymbolicTensorKernel.cpp  SymbolicTensorKernel.h  TokenizationKernel.cpp  TokenizationKernel.h
orchestral-architect/tests/: test_orchestral_system.cpp
ozcog-repos/ko6ml/: API_DOCUMENTATION.md  ARCHITECTURE_OVERVIEW.md  DEVELOPER_GUIDE.md  INSTALLATION_GUIDE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASE6_COMPLETE.md  README.md  TECHNICAL_DOCUMENTATION.md  aiserver.py  cognitive_architecture_demo.py  phase3_demonstration.py  phase4_demonstration.py  phase5_demonstration.py  phase6_demonstration.py  pytest.ini  test_phase1_requirements.py  test_phase2_ecan_requirements.py  test_phase3_requirements.py  test_phase4_integration.py  test_phase5_requirements.py  test_phase6_requirements.py
ozcog-repos/mlpn/: PHASE5_FINAL_VERIFICATION.md  PHASE6_FINAL_VERIFICATION.md  README.md  package-lock.json  package.json  phase3_verification_report.json  pyproject.toml  setup.py  (+1 more)
robotics-embodied/: CMakeLists.txt  CMakeLists_standalone.txt  README.md  standalone_demo  standalone_demo.cpp  standalone_test  standalone_test.cpp
robotics-embodied/examples/: CMakeLists.txt  embodied_cognition_demo.cpp
robotics-embodied/include/robotics/: CMakeLists.txt  EmbodiedCognition.cpp  EmbodiedCognition.hpp  EmbodiedCognitionStandalone.cpp  EmbodiedCognitionStandalone.hpp
robotics-embodied/tests/: CMakeLists.txt  test_embodied_cognition.cpp  test_sensory_motor_validation.cpp
scheme/: cognitive_primitives.scm
scripts/: auto_fix.py  build-packages.sh  build_and_install_atomspace.sh  check-workflow-status.sh  test_auto_fix.py  validate-local-build.sh  verify-package-integrity.sh
tests/: test_cognitive_primitives.py  test_ecan_attention.py  test_phase5_meta_cognition.py
(+295 files in other folders)
